--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: objective-c
 osx_image: xcode9.2
 before_script:
-- chmod +x scripts/travis/add-key.sh
-- chmod +x scripts/travis/remove-key.sh
-- chmod +x scripts/travis/testflight.sh
+#- chmod +x scripts/travis/add-key.sh
+#- chmod +x scripts/travis/remove-key.sh
+#- chmod +x scripts/travis/testflight.sh
 notifications:
   on_success: never
   on_failure: always
@@ -27,6 +27,6 @@ script:
 - xcodebuild "$ACTION" -sdk "$SDK" -destination "$DEST" -project "$PROJECT" -scheme
   "$SCHEME" CODE_SIGNING_REQUIRED=NO
 after_success:
-- "./scripts/travis/testflight.sh"
+#- "./scripts/travis/testflight.sh"
 after_script:
-- "./scripts/travis/remove-key.sh"
+#- "./scripts/travis/remove-key.sh"
