--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,5 @@ script:
 - set -o pipefail
 - xcodebuild "$ACTION" -sdk "$SDK" -destination "$DEST" -project "$PROJECT" -scheme
  "$SCHEME" CODE_SIGNING_REQUIRED=NO
+ - bundle exec release 
 
