--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ matrix:
       ACTION="test"
 
 script:
-- set -o pipefail
-- xcodebuild "$ACTION" -sdk "$SDK" -destination "$DEST" -project "$PROJECT" -scheme
+#- set -o pipefail
+#- xcodebuild "$ACTION" -sdk "$SDK" -destination "$DEST" -project "$PROJECT" -scheme
  "$SCHEME" CODE_SIGNING_REQUIRED=NO
-- bundle exec release
+- bundle exec beta
 
