--- a/scripts/exportOptions-Enterprise.plist
+++ b/scripts/exportOptions-Enterprise.plist
@@ -5,7 +5,7 @@
   <key>compileBitcode</key>
   <false/>
   <key>method</key>
-  <string>appstore</string>
+  <string>app-store</string>
   <key>teamID</key>
   <string>PSKQG74426</string>
   <key>uploadBitcode</key>
