--- a/scripts/exportOptions-Enterprise.plist
+++ b/scripts/exportOptions-Enterprise.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+   <key>provisioningProfiles</key>
+    <dict>
+        <key>snakeysnake</key>
+        <string>travisdisrt.mobileprovision</string>
+    </dict>
   <key>compileBitcode</key>
   <false/>
   <key>method</key>
