--- a/scripts/exportOptions-Enterprise.plist
+++ b/scripts/exportOptions-Enterprise.plist
@@ -5,7 +5,7 @@
    <key>provisioningProfiles</key>
     <dict>
         <key>snakeysnake</key>
-        <string>travisdisrt.mobileprovision</string>
+        <string>travisdisrt</string>
     </dict>
   <key>compileBitcode</key>
   <false/>
